# Search-Engine-Hybrid

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_CHECKLIST.md  PRD.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/api/v1/endpoints/: admin.py  blogs.py  listings.py  pages.py  search.py
app/core/: autocomplete.py  config.py  exceptions.py  search_engine.py  utils.py
app/schemas/: __init__.py  search.py
app/services/: __init__.py  autocomplete.py  search_engine.py
data/: blogs.json  listings.json  pages.json
frontend/src/: App.css  App.jsx
tests/: test_search_engine.py
