[project]
name = "semantic-search-improved"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==24.1.1",
    "fastapi==0.109.0",
    "flake8==7.0.0",
    "httpx==0.26.0",
    "isort==5.13.2",
    "locust==2.20.0",
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.3",
    "mypy==1.8.0",
    "numpy==1.26.4",
    "prometheus-client==0.19.0",
    "pydantic==2.5.3",
    "pytest==7.4.4",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "scikit-learn==1.4.0",
    "sentence-transformers==2.3.1",
    "slowapi==0.1.9",
    "torch==2.2.2",
    "uvicorn[standard]==0.27.0",
]
